fix(tests): remove unnecessary stubbing of CategoryMapper in exception tests